force-app/main/default/objects/Course_Checklist__c/Course_Checklist__c.object-meta.xml
<CustomObject>
    <label>Course Checklist</label>
    <nameField>
        <label>Course Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Checklist</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>