force-app/main/default/objects/Course_Checklist__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment</label>
    <referenceTo>Appointment_Request__c</referenceTo>
    <relationshipLabel>Course Checklist</relationshipLabel>
    <relationshipName>Course_Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>