force-app/main/default/objects/Course_Checklist__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Course Checklist</relationshipLabel>
    <relationshipName>Course_Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>