force-app/main/default/objects/Course_Checklist__c/fields/Checklist_Type__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Type__c</fullName>
    <label>Checklist Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start of Term Tasks</fullName>
            </value>
            <value>
                <fullName>End of Term Tasks</fullName>
            </value>
            <value>
                <fullName>Course Checklist</fullName>
            </value>
            <value>
                <fullName>Zoho Tasks</fullName>
            </value>
            <value>
                <fullName>Advising Discussions</fullName>
            </value>
            <value>
                <fullName>Risk Interventions</fullName>
            </value>
            <value>
                <fullName>Development Plans</fullName>
            </value>
            <value>
                <fullName>Appointment Outcomes</fullName>
            </value>
            <value>
                <fullName>Baseline</fullName>
            </value>
            <value>
                <fullName>Course</fullName>
            </value>
            <value>
                <fullName>Course Tracker</fullName>
                <isActive>false</isActive>
                <label>Course Tracker</label>
            </value>
            <value>
                <fullName>End of Term Action</fullName>
                <isActive>false</isActive>
                <label>End of Term Action</label>
            </value>
            <value>
                <fullName>Payment Request Info Task</fullName>
                <isActive>false</isActive>
                <label>Payment Request Info Task</label>
            </value>
            <value>
                <fullName>Start of Term Action</fullName>
                <isActive>false</isActive>
                <label>Start of Term Action</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>