force-app/main/default/objects/Course_Checklist__c/fields/Completion_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Completion_Percentage__c</fullName>
    <formula>IF(
Total_Checklist_Items__c = 0,
0,
Total_Completed_Items__c / Total_Checklist_Items__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>