force-app/main/default/objects/Course_Checklist__c/fields/Payment_Information__c.field-meta.xml
<CustomField>
    <fullName>Payment_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Information</label>
    <referenceTo>Payment_Information__c</referenceTo>
    <relationshipLabel>Course Checklists</relationshipLabel>
    <relationshipName>Course_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>