force-app/main/default/objects/Course_Checklist__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Course Checklists</relationshipLabel>
    <relationshipName>Course_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>