force-app/main/default/objects/Course_Checklist__c/fields/Progress_Category__c.field-meta.xml
<CustomField>
    <fullName>Progress_Category__c</fullName>
    <formula>IF(
  Completion_Percentage__c &gt;= 0.8,
  &quot;On Track&quot;,
  IF(
    Completion_Percentage__c &gt;= 0.5,
    &quot;Moderate Risk&quot;,
    &quot;High Risk&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress Category</label>
    <type>Text</type>
</CustomField>