force-app/main/default/objects/Course_Checklist__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Delivery Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>