force-app/main/default/objects/Course_Checklist__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Course Checklist</relationshipLabel>
    <relationshipName>Course_Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>