force-app/main/default/objects/Course_Checklist__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term</label>
    <referenceTo>AcademicSession</referenceTo>
    <relationshipLabel>Course Checklists</relationshipLabel>
    <relationshipName>Course_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>