force-app/main/default/objects/Course_Checklist__c/fields/Total_Checklist_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Checklist_Items__c</fullName>
    <label>Total Checklist Items</label>
    <summaryForeignKey>Course_Checklist_Item__c.Course_Checklist__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>