force-app/main/default/objects/Course_Checklist__c/fields/Total_Completed_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_Items__c</fullName>
    <label>Total Completed Items</label>
    <summaryFilterItems>
        <field>Course_Checklist_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed, Blocked, Waived</value>
    </summaryFilterItems>
    <summaryForeignKey>Course_Checklist_Item__c.Course_Checklist__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>