force-app/main/default/objects/Course_Checklist__c/recordTypes/Academic_Associate_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Academic_Associate_Checklist</fullName>
    <active>true</active>
    <description>Checklist managed by Academic Associates</description>
    <label>Academic Associate Checklist</label>
</RecordType>