force-app/main/default/objects/Course_Checklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Checklist_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>